--- a/DDW.DataAccess.SQL/DDW.DataAccess.SQL.csproj
+++ b/DDW.DataAccess.SQL/DDW.DataAccess.SQL.csproj
@@ -70,6 +70,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagramDataAccess.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
