--- a/DarkDarkWeb/DarkDarkWeb.csproj
+++ b/DarkDarkWeb/DarkDarkWeb.csproj
@@ -177,6 +177,7 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="ClassDiagramApp.cd" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\common.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
