--- a/DDW.Core/DDW.Core.csproj
+++ b/DDW.Core/DDW.Core.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Entities\Resource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ResourceCategoriesListViewt.cs" />
+    <Compile Include="ViewModels\ResourceCreateView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagramModels.cd" />
