--- a/DDW.DataAccess.SQL/DDW.DataAccess.SQL.csproj
+++ b/DDW.DataAccess.SQL/DDW.DataAccess.SQL.csproj
@@ -37,9 +37,21 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="FluentValidation, Version=8.0.0.0, Culture=neutral, PublicKeyToken=7de548da2fbae0f0, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentValidation.8.1.0\lib\net45\FluentValidation.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Annotations, Version=4.2.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ComponentModel.Annotations.4.4.1\lib\net461\System.ComponentModel.Annotations.dll</HintPath>
+    </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.ComponentModel.Primitives, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ComponentModel.Primitives.4.3.0\lib\net45\System.ComponentModel.Primitives.dll</HintPath>
+    </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -64,6 +76,14 @@
     <Compile Include="Migrations\201812090834551_requiredDields.cs" />
     <Compile Include="Migrations\201812090834551_requiredDields.Designer.cs">
       <DependentUpon>201812090834551_requiredDields.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812101114041_Unique.cs" />
+    <Compile Include="Migrations\201812101114041_Unique.Designer.cs">
+      <DependentUpon>201812101114041_Unique.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201812101137270_UniqueDeny.cs" />
+    <Compile Include="Migrations\201812101137270_UniqueDeny.Designer.cs">
+      <DependentUpon>201812101137270_UniqueDeny.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -91,6 +111,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201812090834551_requiredDields.resx">
       <DependentUpon>201812090834551_requiredDields.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812101114041_Unique.resx">
+      <DependentUpon>201812101114041_Unique.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201812101137270_UniqueDeny.resx">
+      <DependentUpon>201812101137270_UniqueDeny.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
