--- a/DDW.Core/DDW.Core.csproj
+++ b/DDW.Core/DDW.Core.csproj
@@ -63,7 +63,6 @@
     <Compile Include="Entities\Category.cs" />
     <Compile Include="Entities\Keyword.cs" />
     <Compile Include="Entities\Resource.cs" />
-    <Compile Include="Entities\Validation\CategoryValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ResourceCategoriesListViewt.cs" />
     <Compile Include="ViewModels\ResourceCreateView.cs" />
@@ -73,5 +72,6 @@
     <None Include="ClassDiagramModels.cd" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
