--- a/DDW.Core/DDW.Core.csproj
+++ b/DDW.Core/DDW.Core.csproj
@@ -72,6 +72,8 @@
     <None Include="ClassDiagramModels.cd" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Entities\Validation\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
